--- a/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj.filters
+++ b/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj.filters
@@ -33,16 +33,13 @@
     <ClCompile Include="Session.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="VarjoVSTFrame\VSTCamStreamer.cpp">
+    <ClCompile Include="VarjoVSTFrame\VarjoVSTCamStreamer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="VarjoVSTFrame\VarjoVSTVideoPreviewer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="VarjoVSTFrame\VarjoVSTVideoWriter.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="VarjoVSTFrame\VarjoVSTFrameDispatcher.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -62,7 +59,7 @@
     <ClInclude Include="Session.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="VarjoVSTFrame\VSTCamStreamer.hpp">
+    <ClInclude Include="VarjoVSTFrame\VarjoVSTCamStreamer.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="VarjoVSTFrame\utility.hpp">
@@ -75,9 +72,6 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="VarjoVSTFrame\VarjoVSTVideoWriter.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="VarjoVSTFrame\VarjoVSTFrameDispatcher.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
