--- a/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj.filters
+++ b/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="VarjoVSTFrame\VarjoVSTMetadataWriter.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="VarjoVSTFrame\VarjoVSTFrameDispatcher.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VarjoDataStreamServer.hpp">
@@ -90,6 +93,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="util\filesystem_util.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoVSTFrame\VarjoVSTFrameDispatcher.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
