--- a/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj.filters
+++ b/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj.filters
@@ -13,12 +13,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="ソース ファイル\VSTFrame">
+      <UniqueIdentifier>{af71f810-ad75-4419-ab5c-37c9a599660e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\util">
+      <UniqueIdentifier>{d8555c55-9108-4aad-9676-e3e9afeddf6c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\VSTFrame">
+      <UniqueIdentifier>{ce9da584-847b-4cbe-b47b-4f9fcc6ece0b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="VarjoDataStreamServer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="DataStreamer.cpp">
@@ -33,23 +39,26 @@
     <ClCompile Include="Session.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="VarjoDataStreamServer.cpp">
+      <Filter>ソース ファイル\VSTFrame</Filter>
+    </ClCompile>
     <ClCompile Include="VarjoVSTFrame\VarjoVSTCamStreamer.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="VarjoVSTFrame\VarjoVSTVideoPreviewer.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="VarjoVSTFrame\VarjoVSTVideoWriter.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース ファイル\VSTFrame</Filter>
     </ClCompile>
     <ClCompile Include="VarjoVSTFrame\VarjoVSTMetadataWriter.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース ファイル\VSTFrame</Filter>
+    </ClCompile>
+    <ClCompile Include="VarjoVSTFrame\VarjoVSTVideoPreviewer.cpp">
+      <Filter>ソース ファイル\VSTFrame</Filter>
+    </ClCompile>
+    <ClCompile Include="VarjoVSTFrame\VarjoVSTVideoWriter.cpp">
+      <Filter>ソース ファイル\VSTFrame</Filter>
+    </ClCompile>
+    <ClCompile Include="VarjoVSTFrame\VarjoVSTFrameDispatcher.cpp">
+      <Filter>ソース ファイル\VSTFrame</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="VarjoDataStreamServer.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="DataStreamer.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
@@ -62,35 +71,41 @@
     <ClInclude Include="Session.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="VarjoVSTFrame\VarjoVSTCamStreamer.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="VarjoVSTFrame\utility.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="VarjoVSTFrame\varjo_vst_frame_type.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="VarjoVSTFrame\VarjoVSTVideoPreviewer.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="VarjoVSTFrame\VarjoVSTVideoWriter.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="util\vec_util.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="util\struct_json_io.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="VarjoVSTFrame\ISubmitFrame.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="VarjoVSTFrame\VarjoVSTMetadataWriter.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="util\filesystem_util.hpp">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>ヘッダー ファイル\util</Filter>
+    </ClInclude>
+    <ClInclude Include="util\struct_json_io.hpp">
+      <Filter>ヘッダー ファイル\util</Filter>
+    </ClInclude>
+    <ClInclude Include="util\vec_util.hpp">
+      <Filter>ヘッダー ファイル\util</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoVSTFrame\varjo_vst_frame_type.hpp">
+      <Filter>ヘッダー ファイル\VSTFrame</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoDataStreamServer.hpp">
+      <Filter>ヘッダー ファイル\VSTFrame</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoVSTFrame\VarjoVSTCamStreamer.hpp">
+      <Filter>ヘッダー ファイル\VSTFrame</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoVSTFrame\VarjoVSTMetadataWriter.hpp">
+      <Filter>ヘッダー ファイル\VSTFrame</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoVSTFrame\VarjoVSTVideoPreviewer.hpp">
+      <Filter>ヘッダー ファイル\VSTFrame</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoVSTFrame\VarjoVSTVideoWriter.hpp">
+      <Filter>ヘッダー ファイル\VSTFrame</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoVSTFrame\VarjoVSTFrameDispatcher.hpp">
+      <Filter>ヘッダー ファイル\VSTFrame</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
