--- a/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj
+++ b/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Session.cpp" />
     <ClCompile Include="Undistorter.cpp" />
+    <ClCompile Include="util\PerformanceChecker.cpp" />
     <ClCompile Include="VarjoDataStreamServer.cpp" />
     <ClCompile Include="VarjoVSTFrame\DataLogger.cpp" />
     <ClCompile Include="VarjoVSTFrame\VarjoVSTFrameDispatcher.cpp" />
@@ -153,6 +154,7 @@
     <ClInclude Include="Undistorter.hpp" />
     <ClInclude Include="util\BorrowedOrOwned.hpp" />
     <ClInclude Include="util\filesystem_util.hpp" />
+    <ClInclude Include="util\PerformanceChecker.hpp" />
     <ClInclude Include="util\struct_json_io.hpp" />
     <ClInclude Include="util\vec_util.hpp" />
     <ClInclude Include="VarjoDataStreamServer.hpp" />
