--- a/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj.filters
+++ b/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="VarjoVSTFrame\DataLogger.cpp">
       <Filter>ソース ファイル\VSTFrame</Filter>
     </ClCompile>
+    <ClCompile Include="util\PerformanceChecker.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DataStreamer.hpp">
@@ -115,6 +118,9 @@
     </ClInclude>
     <ClInclude Include="VarjoVSTFrame\utility.hpp">
       <Filter>ヘッダー ファイル\VSTFrame</Filter>
+    </ClInclude>
+    <ClInclude Include="util\PerformanceChecker.hpp">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
