--- a/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj
+++ b/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj
@@ -133,13 +133,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DataStreamer.cpp" />
-    <ClCompile Include="Globals.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Session.cpp" />
-    <ClCompile Include="Undistorter.cpp" />
     <ClCompile Include="util\PerformanceChecker.cpp" />
     <ClCompile Include="VarjoDataStreamServer.cpp" />
+    <ClCompile Include="VarjoExample\DataStreamer.cpp" />
+    <ClCompile Include="VarjoExample\GazeTracking.cpp" />
+    <ClCompile Include="VarjoExample\Globals.cpp" />
+    <ClCompile Include="VarjoExample\Session.cpp" />
+    <ClCompile Include="VarjoExample\Undistorter.cpp" />
+    <ClCompile Include="VarjoEyeTracking\CsvWriter.cpp" />
+    <ClCompile Include="VarjoEyeTracking\DaaLogger.cpp" />
     <ClCompile Include="VarjoVSTFrame\DataLogger.cpp" />
     <ClCompile Include="VarjoVSTFrame\VarjoVSTFrameDispatcher.cpp" />
     <ClCompile Include="VarjoVSTFrame\VarjoVSTMetadataWriter.cpp" />
@@ -148,16 +151,21 @@
     <ClCompile Include="VarjoVSTFrame\VarjoVSTCamStreamer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DataStreamer.hpp" />
-    <ClInclude Include="Globals.hpp" />
-    <ClInclude Include="Session.hpp" />
-    <ClInclude Include="Undistorter.hpp" />
     <ClInclude Include="util\BorrowedOrOwned.hpp" />
     <ClInclude Include="util\filesystem_util.hpp" />
     <ClInclude Include="util\PerformanceChecker.hpp" />
     <ClInclude Include="util\struct_json_io.hpp" />
     <ClInclude Include="util\vec_util.hpp" />
     <ClInclude Include="VarjoDataStreamServer.hpp" />
+    <ClInclude Include="VarjoExample\DataStreamer.hpp" />
+    <ClInclude Include="VarjoExample\GazeTracking.hpp" />
+    <ClInclude Include="VarjoExample\Globals.hpp" />
+    <ClInclude Include="VarjoExample\Session.hpp" />
+    <ClInclude Include="VarjoExample\Undistorter.hpp" />
+    <ClInclude Include="VarjoEyeTracking\CsvWriter.hpp" />
+    <ClInclude Include="VarjoEyeTracking\DataLogger.hpp" />
+    <ClInclude Include="VarjoEyeTracking\ISubmit.hpp" />
+    <ClInclude Include="VarjoEyeTracking\types.hpp" />
     <ClInclude Include="VarjoVSTFrame\DataLogger.hpp" />
     <ClInclude Include="VarjoVSTFrame\ISubmitFrame.hpp" />
     <ClInclude Include="VarjoVSTFrame\utility.hpp" />
