--- a/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj.filters
+++ b/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj.filters
@@ -22,21 +22,21 @@
     <Filter Include="ヘッダー ファイル\VSTFrame">
       <UniqueIdentifier>{ce9da584-847b-4cbe-b47b-4f9fcc6ece0b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\VarjoExample">
+      <UniqueIdentifier>{176e4f38-32cc-4e7c-a3ab-de220f3cbd7b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\VarjoExample">
+      <UniqueIdentifier>{01b4f377-aada-42a6-87e6-cada401736bc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\VarjoEyeTracking">
+      <UniqueIdentifier>{dbdabd31-0efa-4926-b6ca-b713ecaf6bfa}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\VarjoEyeTracking">
+      <UniqueIdentifier>{5d7b548f-860c-4f51-aa1e-347e46073413}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="DataStreamer.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="Globals.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="Undistorter.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="Session.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="VarjoDataStreamServer.cpp">
@@ -63,20 +63,29 @@
     <ClCompile Include="util\PerformanceChecker.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="VarjoExample\DataStreamer.cpp">
+      <Filter>ソース ファイル\VarjoExample</Filter>
+    </ClCompile>
+    <ClCompile Include="VarjoExample\Globals.cpp">
+      <Filter>ソース ファイル\VarjoExample</Filter>
+    </ClCompile>
+    <ClCompile Include="VarjoExample\Session.cpp">
+      <Filter>ソース ファイル\VarjoExample</Filter>
+    </ClCompile>
+    <ClCompile Include="VarjoExample\Undistorter.cpp">
+      <Filter>ソース ファイル\VarjoExample</Filter>
+    </ClCompile>
+    <ClCompile Include="VarjoExample\GazeTracking.cpp">
+      <Filter>ソース ファイル\VarjoExample</Filter>
+    </ClCompile>
+    <ClCompile Include="VarjoEyeTracking\DaaLogger.cpp">
+      <Filter>ソース ファイル\VarjoEyeTracking</Filter>
+    </ClCompile>
+    <ClCompile Include="VarjoEyeTracking\CsvWriter.cpp">
+      <Filter>ソース ファイル\VarjoEyeTracking</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DataStreamer.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="Globals.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="Undistorter.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="Session.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="util\filesystem_util.hpp">
       <Filter>ヘッダー ファイル\util</Filter>
     </ClInclude>
@@ -121,6 +130,33 @@
     </ClInclude>
     <ClInclude Include="util\PerformanceChecker.hpp">
       <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoExample\DataStreamer.hpp">
+      <Filter>ヘッダー ファイル\VarjoExample</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoExample\Globals.hpp">
+      <Filter>ヘッダー ファイル\VarjoExample</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoExample\Session.hpp">
+      <Filter>ヘッダー ファイル\VarjoExample</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoExample\Undistorter.hpp">
+      <Filter>ヘッダー ファイル\VarjoExample</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoExample\GazeTracking.hpp">
+      <Filter>ヘッダー ファイル\VarjoExample</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoEyeTracking\types.hpp">
+      <Filter>ヘッダー ファイル\VarjoEyeTracking</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoEyeTracking\DataLogger.hpp">
+      <Filter>ヘッダー ファイル\VarjoEyeTracking</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoEyeTracking\ISubmit.hpp">
+      <Filter>ヘッダー ファイル\VarjoEyeTracking</Filter>
+    </ClInclude>
+    <ClInclude Include="VarjoEyeTracking\CsvWriter.hpp">
+      <Filter>ヘッダー ファイル\VarjoEyeTracking</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
