20260219帰宅前コミット

--- a/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj
+++ b/VarjoDataStreamServer/VarjoDataStreamServer.vcxproj
@@ -139,10 +139,14 @@
     <ClCompile Include="VarjoExample\DataStreamer.cpp" />
     <ClCompile Include="VarjoExample\GazeTracking.cpp" />
     <ClCompile Include="VarjoExample\Globals.cpp" />
+    <ClCompile Include="VarjoExample\HeadlessView.cpp" />
     <ClCompile Include="VarjoExample\Session.cpp" />
+    <ClCompile Include="VarjoExample\SyncView.cpp" />
     <ClCompile Include="VarjoExample\Undistorter.cpp" />
     <ClCompile Include="VarjoEyeTracking\EyeTrackingDataCsvWriter.cpp" />
     <ClCompile Include="VarjoEyeTracking\EyeTrackingDataLogger.cpp" />
+    <ClCompile Include="VarjoEyeTracking\EyeTrackingDataStreamer.cpp" />
+    <ClCompile Include="VarjoFrameInfo\FrameInfoDataStreamer.cpp" />
     <ClCompile Include="VarjoVSTFrame\DataLogger.cpp" />
     <ClCompile Include="VarjoVSTFrame\VarjoVSTFrameDispatcher.cpp" />
     <ClCompile Include="VarjoVSTFrame\VarjoVSTMetadataWriter.cpp" />
@@ -160,12 +164,18 @@
     <ClInclude Include="VarjoExample\DataStreamer.hpp" />
     <ClInclude Include="VarjoExample\GazeTracking.hpp" />
     <ClInclude Include="VarjoExample\Globals.hpp" />
+    <ClInclude Include="VarjoExample\HeadlessView.hpp" />
     <ClInclude Include="VarjoExample\Session.hpp" />
+    <ClInclude Include="VarjoExample\SyncView.hpp" />
     <ClInclude Include="VarjoExample\Undistorter.hpp" />
     <ClInclude Include="VarjoEyeTracking\EyeTrackingDataCsvWriter.hpp" />
     <ClInclude Include="VarjoEyeTracking\EyeTrackingDataLogger.hpp" />
+    <ClInclude Include="VarjoEyeTracking\EyeTrackingDataStreamer.hpp" />
+    <ClInclude Include="VarjoEyeTracking\EyeTracking_utility.hpp" />
     <ClInclude Include="VarjoEyeTracking\ISubmit.hpp" />
-    <ClInclude Include="VarjoEyeTracking\types.hpp" />
+    <ClInclude Include="VarjoEyeTracking\EyeTracking_types.hpp" />
+    <ClInclude Include="VarjoFrameInfo\FrameInfoDataStreamer.hpp" />
+    <ClInclude Include="VarjoFrameInfo\FrameInfo_type.hpp" />
     <ClInclude Include="VarjoVSTFrame\DataLogger.hpp" />
     <ClInclude Include="VarjoVSTFrame\ISubmitFrame.hpp" />
     <ClInclude Include="VarjoVSTFrame\utility.hpp" />
